--- a/DataProcessing.ipynb
+++ b/DataProcessing.ipynb
@@ -184,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def combine_sentences(sentences, buffer_size=2):\n",
-    "    sentences = [{'sentence': x, 'index' : i} for i, x in enumerate(single_sentences_list)]\n",
+    "    sentences = [{'sentence': x, 'index' : i} for i, x in enumerate(sentences)]\n",
     "    # Go through each sentence dict\n",
     "    for i in range(len(sentences)):\n",
     "\n",
@@ -219,6 +219,71 @@
     "        sentences[i]['combined_sentence'] = combined_sentence\n",
     "\n",
     "    return sentences\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = [\n",
+    "    \"Gather all the necessary ingredients for baking a cake.\",\n",
+    "    \"Check the recipe and make sure you have flour, .\",\n",
+    "    \"Preheat the oven to 350°F (175°C).\",\n",
+    "    \"To prepare the cake batter, cream the butter and sugar together.\",\n",
+    "    \"Add eggs, one at a time, mixing well after each addition.\",\n",
+    "    \"Alternate adding the dry ingredients and milk in three parts, .\",\n",
+    "    \"Pour the batter into a greased 9x13-inch baking dish.\",\n",
+    "    \"Bake the cake for 25-30 minutes, or until a toothpick inserted .\",\n",
+    "    \"Let the cake cool in the pan for 10 minutes, then transfer it .\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sentence': 'Gather all the necessary ingredients for baking a cake.',\n",
+       "  'index': 0,\n",
+       "  'combined_sentence': 'Gather all the necessary ingredients for baking a cake. Check the recipe and make sure you have flour, . Preheat the oven to 350°F (175°C).'},\n",
+       " {'sentence': 'Check the recipe and make sure you have flour, .',\n",
+       "  'index': 1,\n",
+       "  'combined_sentence': 'Gather all the necessary ingredients for baking a cake. Check the recipe and make sure you have flour, . Preheat the oven to 350°F (175°C). To prepare the cake batter, cream the butter and sugar together.'},\n",
+       " {'sentence': 'Preheat the oven to 350°F (175°C).',\n",
+       "  'index': 2,\n",
+       "  'combined_sentence': 'Gather all the necessary ingredients for baking a cake. Check the recipe and make sure you have flour, . Preheat the oven to 350°F (175°C). To prepare the cake batter, cream the butter and sugar together. Add eggs, one at a time, mixing well after each addition.'},\n",
+       " {'sentence': 'To prepare the cake batter, cream the butter and sugar together.',\n",
+       "  'index': 3,\n",
+       "  'combined_sentence': 'Check the recipe and make sure you have flour, . Preheat the oven to 350°F (175°C). To prepare the cake batter, cream the butter and sugar together. Add eggs, one at a time, mixing well after each addition. Alternate adding the dry ingredients and milk in three parts, .'},\n",
+       " {'sentence': 'Add eggs, one at a time, mixing well after each addition.',\n",
+       "  'index': 4,\n",
+       "  'combined_sentence': 'Preheat the oven to 350°F (175°C). To prepare the cake batter, cream the butter and sugar together. Add eggs, one at a time, mixing well after each addition. Alternate adding the dry ingredients and milk in three parts, . Pour the batter into a greased 9x13-inch baking dish.'},\n",
+       " {'sentence': 'Alternate adding the dry ingredients and milk in three parts, .',\n",
+       "  'index': 5,\n",
+       "  'combined_sentence': 'To prepare the cake batter, cream the butter and sugar together. Add eggs, one at a time, mixing well after each addition. Alternate adding the dry ingredients and milk in three parts, . Pour the batter into a greased 9x13-inch baking dish. Bake the cake for 25-30 minutes, or until a toothpick inserted .'},\n",
+       " {'sentence': 'Pour the batter into a greased 9x13-inch baking dish.',\n",
+       "  'index': 6,\n",
+       "  'combined_sentence': 'Add eggs, one at a time, mixing well after each addition. Alternate adding the dry ingredients and milk in three parts, . Pour the batter into a greased 9x13-inch baking dish. Bake the cake for 25-30 minutes, or until a toothpick inserted . Let the cake cool in the pan for 10 minutes, then transfer it .'},\n",
+       " {'sentence': 'Bake the cake for 25-30 minutes, or until a toothpick inserted .',\n",
+       "  'index': 7,\n",
+       "  'combined_sentence': 'Alternate adding the dry ingredients and milk in three parts, . Pour the batter into a greased 9x13-inch baking dish. Bake the cake for 25-30 minutes, or until a toothpick inserted . Let the cake cool in the pan for 10 minutes, then transfer it .'},\n",
+       " {'sentence': 'Let the cake cool in the pan for 10 minutes, then transfer it .',\n",
+       "  'index': 8,\n",
+       "  'combined_sentence': 'Pour the batter into a greased 9x13-inch baking dish. Bake the cake for 25-30 minutes, or until a toothpick inserted . Let the cake cool in the pan for 10 minutes, then transfer it .'}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine_sentences(s)"
    ]
   },
   {
@@ -770,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,6 +953,18 @@
     "\n",
     "NB: If the provided {context} is not sufficient enough to answer the user question please avoid any assumption.\n",
     "Question: {question}\n",
+    "\n",
+    "If the client needs a legal contract clause please require the following specifications and based on that generate a concise legal contract clause: \n",
+    "\n",
+    "1. Parties Involved: \n",
+    "\n",
+    "2. Subject Matter:\n",
+    "\n",
+    "3. Terms and Conditions:\n",
+    "\n",
+    "4. Any specific requirements or preferences you have for the language or structure of the clause\n",
+    "\n",
+    "After client provides the information  Draft a clause that clearly outlines the extent to which each parties will be liable for any damages or losses arising from the performance or non-performance of obligations under the contract, while also considering factors such as negligence, breach of contract, or indemnification\n",
     "\n",
     "\\n\n",
     "\n",
@@ -1032,17 +1109,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deep Lake Dataset in hub://lenjisa48/deeplake-docs-deepmemory already exists, loading from the storage\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from langchain.vectorstores.deeplake import DeepLake\n",
+    "token = os.getenv(\"ACTIVELOOP_TOKEN\")\n",
+    "ORG_ID = \"lenjisa48\"\n",
+    "db = DeepLake(\n",
+    "    dataset_path=f\"hub://{ORG_ID}/deeplake-docs-deepmemory\",  # org_id stands for your username or organization from activeloop\n",
+    "    embedding=embeddings,\n",
+    "    runtime={\"tensor_db\": True},\n",
+    "    token=token,\n",
+    "    # overwrite=True, # user overwrite flag if you want to overwrite the full dataset\n",
+    "    read_only=False,\n",
+    ")# fetch dataset docs and ids if they exist (optional you can also ingest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chunks_to_langchain_documents(chunks):\n",
-    "    def create_langchain_doc(text, metadata: dict = None):\n",
-    "        if metadata is None:\n",
-    "            metadata = {}\n",
-    "        return Document(page_content=text, metadata={**metadata})\n",
+    "docs = db.vectorstore.dataset.text.data(fetch_chunks=True, aslist=True)[\"value\"]\n",
+    "ids = db.vectorstore.dataset.id.data(fetch_chunks=True, aslist=True)[\"value\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/w/Contract-Advisor-RAG-Towards-Building-A-High-Precision-Legal-Expert-LLM-APP/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ragas.langchain'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mragas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlangchain\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RagasEvaluatorChain\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mragas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m     context_recall,\n\u001b[1;32m      4\u001b[0m )\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ragas.langchain'"
+     ]
+    }
+   ],
+   "source": [
+    "from ragas.langchain import RagasEvaluatorChain\n",
+    "from ragas.metrics import (\n",
+    "    context_recall,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'langchain_core.schema'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mschema\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OutputSchemaValidator, OutputSchema\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# If we pass in a model explicitly, we need to make sure it supports the OpenAI function-calling API.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m llm \u001b[38;5;241m=\u001b[39m ChatOpenAI(model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-3.5-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m, temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'langchain_core.schema'"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.schema import OutputSchemaValidator, OutputSchema\n",
+    "# If we pass in a model explicitly, we need to make sure it supports the OpenAI function-calling API.\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
     "\n",
-    "    return [create_langchain_doc(chunk) for chunk in chunks]\n"
+    "\n",
+    "class Questions(BaseModel):\n",
+    "    \"\"\"Identifying information about a person.\"\"\"\n",
+    "\n",
+    "    question: str = Field(..., description=\"Questions about text\")\n",
+    "def is_instance(instance: BaseModel):\n",
+    "    return isinstance(instance, Questions)\n",
+    "\n",
+    "OutputSchemaValidator.validators[Type[Questions]] = is_instance\n",
+    "\n",
+    "\n",
+    "prompt_msgs = [\n",
+    "    SystemMessage(\n",
+    "        content=\"You are a world class expert for generating questions based on provided context. \\\n",
+    "                You make sure the question can be answered by the text.\"\n",
+    "    ),\n",
+    "    HumanMessagePromptTemplate.from_template(\n",
+    "        \"Use the given text to generate a question from the following input: {input}\"\n",
+    "    ),\n",
+    "    HumanMessage(content=\"Tips: Make sure to answer in the correct format\"),\n",
+    "]\n",
+    "prompt = ChatPromptTemplate(messages=prompt_msgs)\n",
+    "chain = create_structured_output_chain(Questions, llm, prompt, verbose=True)\n",
+    "\n",
+    "text = \"# Understanding Hallucinations and Bias ## **Introduction** In this lesson, we'll cover the concept of **hallucinations** in LLMs, highlighting their influence on AI applications and demonstrating how to mitigate them using techniques like the retriever's architectures. We'll also explore **bias** within LLMs with examples.\"\n",
+    "questions = chain.run(input=text)\n",
+    "print(questions)"
    ]
   },
   {
@@ -1105,7 +1288,13 @@
    "source": [
     "from ragas.testset.generator import TestsetGenerator\n",
     "from ragas.testset.evolutions import simple, reasoning, multi_context\n",
+    "def chunks_to_langchain_documents(chunks):\n",
+    "    def create_langchain_doc(text, metadata: dict = None):\n",
+    "        if metadata is None:\n",
+    "            metadata = {}\n",
+    "        return Document(page_content=text, metadata={**metadata})\n",
     "\n",
+    "    return [create_langchain_doc(chunk) for chunk in chunks]\n",
     "generator = TestsetGenerator.with_openai()\n",
     "\n",
     "testset = generator.generate_with_langchain_docs(chunks_to_langchain_documents(chunks), test_size=10, distributions={simple: 0.5, reasoning: 0.25, multi_context: 0.25})"
