--- a/experimental_notebook.ipynb
+++ b/experimental_notebook.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +167,12 @@
     "    \"A \",\n",
     "    \"B \",\n",
     "    \"C \",\n",
-    "    \"D \",\n",
-    "    \"E \",\n",
-    "    \"F \",\n",
-    "    \"G \",\n",
-    "    \"H \",\n",
-    "    \"I \",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +372,7 @@
        "  'combined_sentence': 'The Company may assign this undertaking to third parties. IN WITNESS WHEREOF, the undersigned has executed this Undertaking as of the Effective Date. '}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,33 +383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentences = combine_sentences(single_sentence)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sentence': 'ADVISORY SERVICES AGREEMENT\\n\\nThis Advisory Services Agreement is entered into as of June 15th, 2023 (the “Effective Date”), by and between Cloud Investments Ltd., ID 51-426526-3, an Israeli company (the \"Company\"), and Mr.',\n",
-       " 'index': 0,\n",
-       " 'combined_sentence': 'ADVISORY SERVICES AGREEMENT\\n\\nThis Advisory Services Agreement is entered into as of June 15th, 2023 (the “Effective Date”), by and between Cloud Investments Ltd., ID 51-426526-3, an Israeli company (the \"Company\"), and Mr. Jack Robinson, Passport Number 780055578, residing at 1 Rabin st, Tel Aviv, Israel, Email: jackrobinson@gmail.com (\"Advisor\"). Whereas,\\tAdvisor has expertise and/or knowledge and/or relationships, which are relevant to the Company’s business and the Company has asked Advisor to provide it with certain Advisory services, as described in this Agreement; and\\nWhereas, \\tAdvisor has agreed to provide the Company with such services, subject to the terms set forth in this Agreement.'}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentences[0]"
+    "sentences = combine_sentences(s)\n"
    ]
   },
   {
@@ -420,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,16 +456,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances, sentences = calculate_cosine_distances(sentences)"
+    "import numpy as np\n",
+    "sentences = [\n",
+    "            {'combined_sentence_embedding': np.array([1, 2, 3])},\n",
+    "            {'combined_sentence_embedding': np.array([2, 3, 4])},\n",
+    "            {'combined_sentence_embedding': np.array([3, 4, 5])}\n",
+    "        ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sentence': 'A ',\n",
+       " 'index': 0,\n",
+       " 'combined_sentence': 'A  B  C ',\n",
+       " 'combined_sentence_embedding': array([-2.48287112e-01, -1.98320895e-01, -2.43308932e-01, -3.90329272e-01,\n",
+       "        -7.38029927e-02, -2.10259005e-01, -4.58601534e-01,  1.00610375e+00,\n",
+       "         2.95594394e-01,  9.61664915e-02, -1.15814433e-01,  8.73353481e-01,\n",
+       "        -2.98474282e-01,  2.63017833e-01, -3.23220879e-01,  3.38399783e-02,\n",
+       "         1.93819997e-03,  1.70564651e-02, -6.62295222e-01, -6.62798047e-01,\n",
+       "         7.48516768e-02,  2.79773384e-01,  9.21655357e-01, -3.45272750e-01,\n",
+       "        -8.68295059e-02, -5.90103507e-01,  8.29289794e-01, -3.52872372e-01,\n",
+       "         2.92892873e-01, -2.21152544e-01,  6.60949945e-02, -1.42836168e-01,\n",
+       "         6.74408674e-03, -1.46485358e-01,  1.17293966e+00, -9.70403701e-02,\n",
+       "         1.59732568e+00,  2.10588485e-01, -2.71301836e-01, -7.19001284e-03,\n",
+       "        -1.86103195e-01,  6.93180501e-01,  2.00515509e-01, -3.33554856e-02,\n",
+       "        -7.14640975e-01, -1.82117760e-01, -4.00023073e-01,  2.02929780e-01,\n",
+       "        -3.78454149e-01,  3.21379006e-01, -3.08277190e-01,  8.83010864e-01,\n",
+       "         2.82897949e-01,  1.07173026e-02, -4.46740329e-01, -5.13049722e-01,\n",
+       "        -7.08939195e-01,  1.21934928e-01, -1.92619398e-01, -2.81895727e-01,\n",
+       "        -7.35916317e-01,  1.19332814e+00,  3.36068757e-02, -9.39503670e-01,\n",
+       "        -2.66470432e-01,  2.89080381e-01, -5.17841756e-01, -1.13061294e-01,\n",
+       "         2.80008316e-01, -3.88118476e-01, -6.49767399e-01,  3.36796194e-01,\n",
+       "         1.90295465e-02, -5.58482349e-01,  2.24103785e+00, -3.37697178e-01,\n",
+       "        -3.51080269e-01, -5.22639640e-02,  5.05029485e-02, -1.02922820e-01,\n",
+       "         6.54119611e-01, -2.83122867e-01, -4.84157264e-01, -4.50133979e-01,\n",
+       "         2.60617793e-01, -5.86660616e-02,  1.62855685e-02, -3.43469858e-01,\n",
+       "         2.90112108e-01,  1.38950992e+00, -2.44767815e-01,  5.03500924e-02,\n",
+       "         8.27160358e-01, -3.51917237e-01,  1.05620325e-02,  1.61531299e-01],\n",
+       "       dtype=float32)}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances, sentences = calculate_cosine_distances(sentences)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.007416666029069652, 0.0020711102661086223],\n",
+       " [{'combined_sentence_embedding': array([1, 2, 3]),\n",
+       "   'distance_to_next': 0.007416666029069652},\n",
+       "  {'combined_sentence_embedding': array([2, 3, 4]),\n",
+       "   'distance_to_next': 0.0020711102661086223},\n",
+       "  {'combined_sentence_embedding': array([3, 4, 5])}])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distances, sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
